tidy up perch + make sure sounds button doesn’t wrap

--- a/src/css/blocks/_perch.scss
+++ b/src/css/blocks/_perch.scss
@@ -16,8 +16,8 @@
 		block-size: calc(var(--size-logo) / 1.205);
 		position: absolute;
 		inset-inline-end: var(--size-gutter);
-		inset-block-start: calc(var(--size-header, 0) / -2);
-		transform: scaleX(-1);
+		inset-block-start: 0;
+		transform: scaleX(-1) translateY(-20%);
 		pointer-events: none;
 	}
 
